# google-generative-ai-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust-check.yml
examples/: count_tokens.rs  get_model.rs  get_models.rs  text_request.rs  text_request_json.rs  text_request_stream.rs  vertex_count_tokens.rs  vertex_text_request.rs  vertex_text_request_stream.rs
src/: gemini.rs  lib.rs
src/v1/: api.rs  errors.rs  gemini.rs  mod.rs  vertexai.rs
src/v1beta/: api.rs  gemini.rs  mod.rs  vertexai.rs
