[package]
name = "google-generative-ai-rs"
version = "0.3.0"
edition = "2021"
authors = ["Mick Clarke <avastmick@outlook.com>"]
license = "MIT"
description = "An unofficial rust-based client library to interact with the Google Gemini generative AI API"
repository = "https://github.com/avastmick/google-generative-ai-rs"
readme = "README.md"
keywords = ["google", "generative", "ai", "gemini", "client"]

[features]
beta = []

[dependencies]
bytecount = "0.6.7"
env_logger = { version = "0.11" }
futures = { version = "0.3" }
gcp_auth = { version = "0.11" }
log = { version = "0.4.20" }
reqwest = { version = "0.11", features = ["json"] }
reqwest-streams = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.35", features = ["full"] }
