[package]
name = "google-generative-ai-rs"
version = "0.3.2"
edition = "2021"
authors = ["Mick Clarke <avastmick@outlook.com>"]
license = "MIT"
description = "An unofficial rust-based client library to interact with the Google Gemini generative AI API"
repository = "https://github.com/avastmick/google-generative-ai-rs"
readme = "README.md"
keywords = ["google", "generative", "ai", "gemini", "client"]

[features]
beta = []

[dependencies]
bytecount = "0.6.7"
env_logger = { version = "0.11" }
futures = { version = "0.3" }
gcp_auth = { version = "0.12" }
log = { version = "0.4.20" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
reqwest-streams = { version = "0.8.2", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.35", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
